fix(style): avatar misalignment in navbar

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1139,7 +1139,6 @@ input.form-control-lg {
   display: flex;
   background: rgb(24, 24, 24);
   position: relative;
-  height: 56px;
   padding: 1rem;
   margin: -1rem 0;
   margin-left: auto;
